// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App when the there are messages should show empty input and message list 1`] = `
<div
  className="Chat"
>
  
  <MessageList
    messages={
      Array [
        Object {
          "author": "Bugs Bunny",
          "id": "abc",
          "isOwn": false,
          "message": "Whats up doc?",
          "timestamp": "Thu Mar 15 2018",
        },
      ]
    }
  />
  <div
    className="Chat__last-message-handle"
  />
  <NewMessage
    onMessageSend={[Function]}
  />
</div>
`;

exports[`App when the there are no messages should show empty input and empty message list 1`] = `
<div
  className="Chat"
>
  
  <MessageList
    messages={Array []}
  />
  <div
    className="Chat__last-message-handle"
  />
  <NewMessage
    onMessageSend={[Function]}
  />
</div>
`;
